Fix coloration and spacing

--- a/css/main.css
+++ b/css/main.css
@@ -32,6 +32,7 @@ header {
 .nav li {
   display: inline;
   text-align: center;
+  justify-content: space-around;
   padding: 0.4em;
   box-shadow: inset 0 0 0 0 #54b3d6;
   color: #54b3d6;
@@ -41,7 +42,6 @@ header {
 }
 
 .nav li:hover {
-  background-color: #092;
   box-shadow: inset 100px 0 0 0 #54b3d6;
   color: white;
 }
